@@ -1,0 +1,49 @@
+<karteikasten><gruppe anzahl="2"><book>
+    <author>Jim Melton</author>
+    <author>Alan Simon</author>
+    <title>SQL:1999</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Andrew Eisenberg</author>
+    <title>Understanding SQL and Java Together</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Stephen Buxton</author>
+    <title>Querying XML</title>
+  </book></gruppe><gruppe anzahl="2"><book>
+    <author>Jim Melton</author>
+    <author>Alan Simon</author>
+    <title>SQL:1999</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Andrew Eisenberg</author>
+    <title>Understanding SQL and Java Together</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Stephen Buxton</author>
+    <title>Querying XML</title>
+  </book></gruppe><gruppe anzahl="2"><book>
+    <author>Jim Melton</author>
+    <author>Alan Simon</author>
+    <title>SQL:1999</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Andrew Eisenberg</author>
+    <title>Understanding SQL and Java Together</title>
+  </book><book>
+    <author>Jim Melton</author>
+    <author>Stephen Buxton</author>
+    <title>Querying XML</title>
+  </book></gruppe><gruppe anzahl="1"><book>
+    <author>Jim Melton</author>
+    <title>Advanced SQL:1999</title>
+  </book><book>
+    <author>Alan Simon</author>
+    <title>Strategic Database Technology</title>
+  </book></gruppe><gruppe anzahl="1"><book>
+    <author>Jim Melton</author>
+    <title>Advanced SQL:1999</title>
+  </book><book>
+    <author>Alan Simon</author>
+    <title>Strategic Database Technology</title>
+  </book></gruppe></karteikasten>
